--- a/app/src/main/res/layout/current_location.xml
+++ b/app/src/main/res/layout/current_location.xml
@@ -100,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="left"
-                android:text="Latitude" />
+                android:text="Address" />
 
             <TextView
                 android:id="@+id/latTextView"
@@ -112,29 +112,29 @@
 
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="20dp"
-            android:orientation="horizontal"
-            tools:ignore="MissingConstraints">
+<!--        <LinearLayout-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:padding="20dp"-->
+<!--            android:orientation="horizontal"-->
+<!--            tools:ignore="MissingConstraints">-->
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="left"
-                android:text="Longitude: " />
+<!--            <TextView-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ems="10"-->
+<!--                android:gravity="left"-->
+<!--                android:text="Longitude: " />-->
 
-            <TextView
-                android:id="@+id/lonTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:ems="10"
-                android:gravity="right"
-                android:text="Longitude: " />
+<!--            <TextView-->
+<!--                android:id="@+id/lonTextView"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:ems="10"-->
+<!--                android:gravity="right"-->
+<!--                android:text="Longitude: " />-->
 
-        </LinearLayout>
+<!--        </LinearLayout>-->
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
