--- a/app/src/main/res/layout/fragment_question_answer.xml
+++ b/app/src/main/res/layout/fragment_question_answer.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
@@ -8,7 +8,6 @@
         android:id="@+id/item_number"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
         android:textAppearance="?attr/textAppearanceListItem"
         android:text="Question"
         android:textStyle="bold"/>
@@ -17,7 +16,9 @@
         android:id="@+id/content"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="@dimen/text_margin"
+        android:layout_marginBottom="10dp"
+        android:layout_marginTop="10dp"
         android:textAppearance="?attr/textAppearanceListItem"
-        android:text="Answer"/>
+        android:text="Answer"
+        android:autoLink="web"/>
 </LinearLayout>
