--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,6 +6,10 @@
     android:layout_height="match_parent"
     tools:context=".RegistrationActivity">
 
-    <include layout="@layout/fragment_registration"/>
+    <fragment
+        android:id="@+id/registration"
+        android:name="com.example.covid_19.RegistrationFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
