--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -6,9 +6,8 @@
     android:layout_height="match_parent"
     tools:context=".RegistrationActivity">
 
-    <fragment
+    <FrameLayout
         android:id="@+id/registration"
-        android:name="com.example.covid_19.RegistrationFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
