added youtube video

--- a/app/src/main/res/layout/activity_contact.xml
+++ b/app/src/main/res/layout/activity_contact.xml
@@ -11,6 +11,6 @@
         android:id="@+id/contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.covid_19.ContactList"/>
+        android:name="com.example.covid_19.ContactListFragment"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
