--- a/app/src/main/res/layout/fragment_question_answer_item.xml
+++ b/app/src/main/res/layout/fragment_question_answer_item.xml
@@ -5,19 +5,13 @@
     android:orientation="vertical">
 
     <TextView
-        android:id="@+id/item_number"
+        android:id="@+id/question_answer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAppearance="?attr/textAppearanceListItem"
-        android:text="Question"
-        android:textStyle="bold"/>
-
-    <TextView
-        android:id="@+id/content"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="10dp"
-        android:layout_marginTop="10dp"
+        android:paddingLeft="?android:attr/expandableListPreferredChildPaddingLeft"
+        android:paddingTop="10dp"
+        android:paddingBottom="10dp"
+        android:paddingRight="10dp"
         android:textAppearance="?attr/textAppearanceListItem"
         android:text="Answer"
         android:autoLink="web"/>
