--- a/app/src/main/res/layout/activity_question_answer.xml
+++ b/app/src/main/res/layout/activity_question_answer.xml
@@ -4,13 +4,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".QuestionAnswerActivity"
-    android:layout_margin="@dimen/text_margin">
+    tools:context=".QuestionAnswerActivity">
 
     <fragment
         android:id="@+id/contact"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:name="com.example.covid_19.QuestionAnswer"/>
+        android:name="com.example.covid_19.QuestionAnswerFragment"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
