--- a/app/src/main/res/layout/content_side_bar.xml
+++ b/app/src/main/res/layout/content_side_bar.xml
@@ -17,14 +17,14 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:navGraph="@navigation/mobile_navigation" />
-    <FrameLayout
-        android:id="@+id/SecondFragment"
-        android:name="com.example.covid_19.SecondFragment"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout="@layout/current_location"/>
+    <!--    <FrameLayout-->
+    <!--        android:id="@+id/SecondFragment"-->
+    <!--        android:name="com.example.covid_19.SecondFragment"-->
+    <!--        android:layout_width="0dp"-->
+    <!--        android:layout_height="0dp"-->
+    <!--        app:layout_constraintBottom_toBottomOf="parent"-->
+    <!--        app:layout_constraintLeft_toLeftOf="parent"-->
+    <!--        app:layout_constraintRight_toRightOf="parent"-->
+    <!--        app:layout_constraintTop_toTopOf="parent"-->
+    <!--        tools:layout="@layout/fragment_profile"/>-->
 </androidx.constraintlayout.widget.ConstraintLayout>
