--- a/app/src/main/res/menu/activity_side_bar_drawer.xml
+++ b/app/src/main/res/menu/activity_side_bar_drawer.xml
@@ -5,7 +5,7 @@
 
     <group android:checkableBehavior="single">
         <item
-            android:id="@+id/profile"
+            android:id="@+id/video"
             android:title="@string/menu_home" />
         <item
             android:id="@+id/emergency"
