--- a/app/src/main/res/layout/fragment_covid_data_list.xml
+++ b/app/src/main/res/layout/fragment_covid_data_list.xml
@@ -1,8 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/pullToRefresh"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white">
+
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/list"
         android:name="com.example.covid_19.CovidDataFragment"
         android:layout_width="match_parent"
@@ -11,4 +16,14 @@
         android:layout_marginRight="16dp"
         app:layoutManager="LinearLayoutManager"
         tools:context=".CovidDataFragment"
-        tools:listitem="@layout/fragment_covid_data"/>
+        tools:listitem="@layout/fragment_covid_data_group" />
+
+    <!--    <ExpandableListView-->
+    <!--        android:id="@+id/covid_data_expan"-->
+    <!--        android:layout_width="match_parent"-->
+    <!--        android:layout_height="match_parent"-->
+    <!--        android:dividerHeight="0.5dp"-->
+    <!--        android:groupIndicator="@null"-->
+    <!--        android:background="@android:color/white"-->
+    <!--        android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft" />-->
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
