--- a/app/src/main/res/layout/activity_side_bar.xml
+++ b/app/src/main/res/layout/activity_side_bar.xml
@@ -18,6 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:background="@android:color/white"
+        app:itemTextColor="@android:color/black"
+        app:itemIconTint="@color/colorBackground"
         android:fitsSystemWindows="true"
         app:headerLayout="@layout/nav_header_side_bar"
         app:menu="@menu/activity_side_bar_drawer" />
