--- a/app/src/main/res/layout/fragment_contact_list.xml
+++ b/app/src/main/res/layout/fragment_contact_list.xml
@@ -4,61 +4,103 @@
     android:id="@+id/card_view"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    card_view:cardCornerRadius="5dp"
-    card_view:contentPadding="25dp"
-    card_view:cardElevation="6dp"
-    card_view:cardMaxElevation="10dp"
-    android:layout_marginLeft="5dp"
-    android:layout_marginRight="5dp"
-    android:layout_marginTop="5dp">
+    android:layout_margin="10dp"
+    card_view:cardCornerRadius="3dp"
+    card_view:cardElevation="10dp"
+    card_view:cardMaxElevation="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:padding="@dimen/text_margin">
+
+        <TextView
+            android:id="@+id/state"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="state"
+            android:textColor="@android:color/black"
+            android:textAppearance="?attr/textAppearanceListItem"
+            android:textStyle="bold"
+            android:textSize="20dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
 
             <TextView
-                android:id="@+id/state"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_weight="0.5"
-                android:textAppearance="?attr/textAppearanceListItem" />
+                android:layout_weight="0.3"
+                android:text="Ambulance:"
+                android:textColor="@android:color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                 />
 
             <TextView
                 android:id="@+id/ambulance"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_weight="0.5"
-                android:textAppearance="?attr/textAppearanceListItem" />
+                android:text="number"
+                android:layout_weight="0.7"
+                android:textColor="@android:color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                 />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:text="Fire:"
+                android:layout_weight="0.3"
+                android:textColor="@android:color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                 />
 
             <TextView
                 android:id="@+id/fire"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_weight="0.5"
-                android:textAppearance="?attr/textAppearanceListItem" />
+                android:text="number"
+                android:layout_weight="0.7"
+                android:textColor="@android:color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                 />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginTop="5dp">
+
+            <TextView
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.3"
+                android:text="Police:"
+                android:textColor="@android:color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                />
 
             <TextView
                 android:id="@+id/police"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_margin="@dimen/text_margin"
-                android:layout_weight="0.5"
-                android:textAppearance="?attr/textAppearanceListItem" />
+                android:layout_weight="0.7"
+                android:text="number"
+                android:textColor="@android:color/black"
+                android:textAppearance="?attr/textAppearanceListItem"
+                 />
         </LinearLayout>
 
 
