--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_main"
+    android:id="@+id/maps_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <!--    <fragment-->
-    <!--        android:id="@+id/autocomplete"-->
-    <!--        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="0dp"-->
-    <!--        android:layout_marginBottom="3dp"-->
-    <!--        android:layout_weight="0.1"-->
-    <!--        tools:context=".MapsFragment" />-->
+    <fragment
+        android:id="@+id/autocomplete"
+        android:name="com.google.android.libraries.places.widget.AutocompleteSupportFragment"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginBottom="3dp"
+        android:layout_weight="0.1"
+        tools:context=".MapsFragment" />
 
     <fragment
         android:id="@+id/map"
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginBottom="3dp"
-        android:layout_weight="0.9"
+        android:layout_weight="0.8"
         tools:context=".MapsFragment" />
 
     <Button
@@ -29,6 +29,10 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="0.1"
-        android:text="Submit" />
+        android:background="@drawable/button"
+        android:drawableRight="@drawable/ic_check_circle_black_24dp"
+        android:paddingRight="50dp"
+        android:text="Confirm your home location"
+        android:textStyle="bold" />
 
 </LinearLayout>
