--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -5,24 +5,30 @@
     android:id="@+id/current_location"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/text_margin"
     tools:context=".ProfileFragment"
     android:theme="@style/AppTheme">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:background="#101947"
+        android:orientation="vertical"
+        tools:layout_editor_absoluteX="16dp"
+        tools:layout_editor_absoluteY="16dp"
+        android:padding="@dimen/text_margin">
 
         <TextView
+            android:id="@+id/user_icon"
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center"
             android:background="@drawable/border"
             android:ems="10"
+            android:layout_marginTop="30dp"
             android:gravity="center"
             android:text="MA"
             android:textAlignment="center"
+            android:textColor="#fff"
             android:textSize="40dp"
             android:textStyle="bold" />
 
@@ -32,36 +38,40 @@
             android:layout_height="wrap_content"
             android:ems="10"
             android:gravity="center"
-            android:text="Madhu" />
+            android:layout_marginTop="15dp"
+            android:text="Madhu"
+            android:textColor="#fff"/>
 
         <TextView
             android:id="@+id/user_email_phone"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:paddingTop="10dp"
+            android:paddingTop="15dp"
             android:text="madhu@gmail.com"
-            android:textSize="20dp" />
+            android:textSize="20dp"
+            android:textColor="#fff"/>
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@drawable/line"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
-            android:gravity="center"
-            android:elevation="0dp">
+            android:background="@drawable/line"
+            android:elevation="0dp"
+            android:gravity="center">
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:background="@drawable/border"
+                android:elevation="10dp"
                 android:ems="10"
+                android:textColor="#fff"
                 android:gravity="center"
                 android:padding="5dp"
-                android:text="Edit Profile"
-                android:elevation="10dp"/>
+                android:text="Edit Profile" />
 
         </RelativeLayout>
 
@@ -73,6 +83,7 @@
             android:ems="10"
             android:gravity="center"
             android:text="Address"
+            android:textColor="#fff"
             android:textSize="20dp" />
 
     </LinearLayout>
