--- a/app/src/main/res/layout/fragment_question_answer_group.xml
+++ b/app/src/main/res/layout/fragment_question_answer_group.xml
@@ -12,8 +12,9 @@
         android:text="Question"
         android:paddingTop="15dp"
         android:paddingBottom="15dp"
-        android:paddingRight="10dp"
-        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:paddingLeft="10dp"
+        android:textColor="@android:color/black"
+        android:paddingRight="?android:attr/expandableListPreferredItemPaddingLeft"
         android:textStyle="bold"/>
 
 </LinearLayout>
