--- a/app/src/main/res/layout/fragment_question_answer_list.xml
+++ b/app/src/main/res/layout/fragment_question_answer_list.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:background="#f4f4f4"
     android:orientation="vertical">
 
     <ExpandableListView
         android:id="@+id/question_answer_expan"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:groupIndicator="@drawable/expandable"
+        android:layoutDirection="rtl"
         android:indicatorLeft="?android:attr/expandableListPreferredItemIndicatorLeft"
         android:divider="@android:color/darker_gray"
         android:dividerHeight="0.5dp"/>
