--- a/app/src/main/res/layout/fragment_registration.xml
+++ b/app/src/main/res/layout/fragment_registration.xml
@@ -1,40 +1,50 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="20dp">
+    android:padding="40dp">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="300dp"
+        android:src="@mipmap/ic_launcher_foreground_app"
+        android:scaleType="fitXY"
+        />
 
     <EditText
         android:id="@+id/editTextName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:drawablePadding="5dp"
         android:ems="10"
-        android:hint="Enter Name"
-        android:inputType="textPersonName" />
+        android:hint="Username"
+        android:inputType="textEmailAddress"
+        android:paddingLeft="10dp"
+        android:textStyle="bold"
+        android:textColorHint="#999" />
 
     <EditText
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:drawablePadding="5dp"
         android:ems="10"
-        android:hint="Enter Email"
-        android:inputType="textPersonName" />
-
-
-    <EditText
-        android:id="@+id/editTextMobile"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:hint="Enter Mobile Number"
-        android:inputType="textEmailAddress" />
+        android:hint="Email or phone"
+        android:paddingLeft="10dp"
+        android:textStyle="bold"
+        android:textColorHint="#999" />
 
     <Button
         android:id="@+id/buttonSubmit"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="30dp"
+        android:onClick="submit"
+        android:textStyle="bold"
+        android:background="@drawable/button"
+        android:text="Next" />
 
 </LinearLayout>
