--- a/app/src/main/res/menu/activity_side_bar_drawer.xml
+++ b/app/src/main/res/menu/activity_side_bar_drawer.xml
@@ -3,18 +3,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     tools:showIn="navigation_view">
 
-    <group android:checkableBehavior="single">
-        <item
-            android:id="@+id/video"
-            android:title="@string/menu_home" />
+    <group
+        android:id="@+id/group_first"
+        android:checkableBehavior="single">
+        <!--        <item-->
+        <!--            android:id="@+id/video"-->
+        <!--            android:icon="@drawable/ic_verified_user_black_24dp"-->
+        <!--            android:title="@string/menu_home" />-->
         <item
             android:id="@+id/emergency"
+            android:icon="@drawable/ic_help_black_24dp"
             android:title="@string/menu_gallery" />
         <item
             android:id="@+id/qa"
-            android:title="@string/menu_slideshow" />
+            android:icon="@drawable/ic_question_answer_black_24dp"
+            android:title="@string/menu_faq" />
+        <!--        <item-->
+        <!--            android:id="@+id/settings"-->
+        <!--            android:icon="@drawable/ic_settings_black_24dp"-->
+        <!--            android:title="Settings" />-->
+        <!--    </group>-->
+
+        <!--    <group-->
+        <!--        android:id="@+id/group_secondary"-->
+        <!--        android:checkableBehavior="single"-->
+        <!--        android:menuCategory="secondary">-->
         <item
-            android:id="@+id/settings"
-            android:title="Settings" />
+            android:id="@+id/privacy"
+            android:icon="@drawable/ic_verified_user_black_24dp"
+            android:title="Privacy" />
+        <item
+            android:id="@+id/aboutus"
+            android:icon="@drawable/ic_help_black_24dp"
+            android:title="About us" />
     </group>
 </menu>
