--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -1,24 +1,30 @@
 <resources>
     <!-- Reply Preference -->
-    <string-array name="reply_entries">
-        <item>Reply</item>
-        <item>Reply to all</item>
+    <string-array name="alert_entries">
+        <item>1 Hour</item>
+        <item>3 Hour</item>
+        <item>6 Hour</item>
+        <item>12 Hour</item>
     </string-array>
 
-    <string-array name="reply_values">
-        <item>reply</item>
-        <item>reply_all</item>
+    <string-array name="alert_values">
+        <item>1</item>
+        <item>3</item>
+        <item>6</item>
+        <item>12</item>
     </string-array>
 
     <string-array name="alarm_entries">
         <item>15 Minutes</item>
         <item>30 Minutes</item>
         <item>1 Hour</item>
+        <item>6 Hour</item>
     </string-array>
 
     <string-array name="alarm_values">
         <item>15</item>
         <item>30</item>
         <item>1</item>
+        <item>6</item>
     </string-array>
 </resources>
